<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<!--购物车Fragment-->

    <com.cniao5.cniao5shop.widget.CnToolbar
        android:id="@+id/toolbar_search_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="56dp"
        app:isShowSearchView="false"
        app:title="购物车"
        android:layout_alignParentTop="true"
        />

    <!--购物车数据-->
    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/toolbar_search_view"
        android:id="@+id/recyclerview_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#802f4f4f"
        android:gravity="center_vertical">


        <CheckBox
            android:id="@+id/checkbox_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:checked="true"
            android:textSize="14sp"
            android:textColor="@color/white"
            style="@style/customCheckbox"
            android:text="@string/select_all"
            />

        <TextView
            android:id="@+id/tv_total"
            android:text="@string/total"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/checkbox_all"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_order"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:minHeight="30dp"
            android:minWidth="80dp"
            android:text="@string/accounts"
            style="@style/bigRedButton"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_del"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:minHeight="40dp"
            android:text="@string/delete"
            android:minWidth="80dp"
            style="@style/bigRedButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>